--- a/MemeApp/Storyboards/Base.lproj/Main.storyboard
+++ b/MemeApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gYb-sy-oWj">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -8,20 +8,107 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Meme List View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Memes-->
+        <scene sceneID="4TU-LD-HS2">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MemeListViewController" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="Yu2-ZA-oXL" customClass="MemeListViewController" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="DKi-Ey-ent">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="memeCell" rowHeight="128" id="jYX-1Z-w6C">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="128"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jYX-1Z-w6C" id="d7k-tZ-07p" customClass="MemeViewCell" customModule="MemeApp" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rmQ-gD-z5p">
+                                            <rect key="frame" x="16" y="0.0" width="128" height="128"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="rmQ-gD-z5p" secondAttribute="height" multiplier="1:1" id="Ump-yc-GUd"/>
+                                            </constraints>
+                                        </imageView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="lJ7-Ey-DFf">
+                                            <rect key="frame" x="167" y="24" width="41.5" height="86"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EjI-uC-a8t">
+                                                    <rect key="frame" x="0.0" y="0.0" width="41.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sga-vh-xz8">
+                                                    <rect key="frame" x="0.0" y="65.5" width="41.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="rmQ-gD-z5p" firstAttribute="top" secondItem="d7k-tZ-07p" secondAttribute="top" id="b6M-4p-8JA"/>
+                                        <constraint firstAttribute="bottom" secondItem="rmQ-gD-z5p" secondAttribute="bottom" id="kRF-PY-drw"/>
+                                        <constraint firstItem="rmQ-gD-z5p" firstAttribute="leading" secondItem="d7k-tZ-07p" secondAttribute="leading" constant="16" id="lJX-Be-xIE"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="lJ7-Ey-DFf" secondAttribute="bottom" constant="7" id="mVf-vO-uVu"/>
+                                        <constraint firstItem="lJ7-Ey-DFf" firstAttribute="leading" secondItem="rmQ-gD-z5p" secondAttribute="trailing" constant="23" id="qJV-Sr-4UP"/>
+                                        <constraint firstItem="lJ7-Ey-DFf" firstAttribute="top" secondItem="d7k-tZ-07p" secondAttribute="topMargin" constant="13" id="snl-WY-CLw"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="memeImage" destination="rmQ-gD-z5p" id="mo7-AW-PBg"/>
+                                        <outlet property="titleLabel" destination="EjI-uC-a8t" id="OZ8-fF-Vcv"/>
+                                        <outlet property="upsLabel" destination="Sga-vh-xz8" id="pu2-XV-mOS"/>
+                                    </connections>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="5tE-kt-IQ4" kind="show" id="Bzo-10-rCu"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Yu2-ZA-oXL" id="pfo-bl-XLW"/>
+                            <outlet property="delegate" destination="Yu2-ZA-oXL" id="wp6-Kf-yDh"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Memes" id="4CC-MD-Tnd"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v0h-oZ-Xkr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="360.86956521739131" y="122.54464285714285"/>
+        </scene>
+        <!--Meme Details View Controller-->
+        <scene sceneID="sEc-94-7LC">
+            <objects>
+                <viewController id="5tE-kt-IQ4" customClass="MemeDetailsViewController" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YL2-ic-pqx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="TSn-v4-Cqc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="AxB-LI-vf7"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="teH-BE-rP3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="94"/>
+            <point key="canvasLocation" x="1067" y="123"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="mQ3-0S-7bs">
+            <objects>
+                <navigationController id="gYb-sy-oWj" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7sB-wa-fCB">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Yu2-ZA-oXL" kind="relationship" relationship="rootViewController" id="iTQ-p7-S6V"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iSb-Nc-TyL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-531" y="123"/>
         </scene>
     </scenes>
     <resources>
